# yahoo-mail-sorter

./: .env.example  .gitignore  pyproject.toml  rules.yaml
src/yahoo_mail_sorter/: __init__.py  classifier.py  cli.py  config.py  decoder.py  exceptions.py  imap_client.py  models.py  rules_loader.py  sorter.py
tests/: conftest.py  test_classifier.py  test_cli.py  test_config.py  test_decoder.py  test_exceptions.py  test_imap_client.py  test_models.py  test_rules_loader.py  test_sorter.py
